Gradle: Remove unused dependencies