@@ -11,13 +11,9 @@ repositories {
 dependencies {
     implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
     implementation 'io.quarkus:quarkus-undertow'
-    implementation 'io.quarkus:quarkus-picocli'
-    implementation 'io.quarkus:quarkus-jackson'
-    implementation 'io.quarkus:quarkus-arc'
 
     implementation "com.azure:azure-identity:${azureIdentity}"
     implementation "com.azure.resourcemanager:azure-resourcemanager:${azureResourcemanager}"
-    implementation "com.fasterxml.jackson.core:jackson-databind:${jacksonDatabind}"
 }
 
 group = 'cloud.heiss'
@@ -26,11 +22,6 @@ version = '1.0.0-SNAPSHOT'
 java {
     sourceCompatibility = JavaVersion.VERSION_21
     targetCompatibility = JavaVersion.VERSION_21
-}
-
-test {
-    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
-    jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
 }
 
 compileJava {
